@@ -18,20 +18,19 @@
  */
 package org.apache.pulsar.broker.web.plugin.servlet;
 
+import static com.google.common.base.Preconditions.checkArgument;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Collections;
 import lombok.experimental.UtilityClass;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.pulsar.common.nar.NarClassLoader;
+import org.apache.pulsar.common.nar.NarClassLoaderBuilder;
 import org.apache.pulsar.common.util.ObjectMapperFactory;
-
-import static com.google.common.base.Preconditions.checkArgument;
 
 /**
  * Util class to search and load {@link AdditionalServlets}.
@@ -40,7 +39,7 @@ import static com.google.common.base.Preconditions.checkArgument;
 @Slf4j
 public class AdditionalServletUtils {
 
-    public final String ADDITIONAL_SERVLET_FILE = "additional_servlet.yml";
+    public static final String ADDITIONAL_SERVLET_FILE = "additional_servlet.yml";
 
     /**
      * Retrieve the additional servlet definition from the provided nar package.
@@ -51,9 +50,10 @@ public class AdditionalServletUtils {
      */
     public AdditionalServletDefinition getAdditionalServletDefinition(
             String narPath, String narExtractionDirectory) throws IOException {
-
-        try (NarClassLoader ncl = NarClassLoader.getFromArchive(
-                new File(narPath), Collections.emptySet(), narExtractionDirectory)) {
+        try (NarClassLoader ncl = NarClassLoaderBuilder.builder()
+                .narFile(new File(narPath))
+                .extractionDirectory(narExtractionDirectory)
+                .build();) {
             return getAdditionalServletDefinition(ncl);
         }
     }
@@ -119,10 +119,12 @@ public class AdditionalServletUtils {
     public AdditionalServletWithClassLoader load(
             AdditionalServletMetadata metadata, String narExtractionDirectory) throws IOException {
 
-        NarClassLoader ncl = NarClassLoader.getFromArchive(
-                metadata.getArchivePath().toAbsolutePath().toFile(),
-                Collections.emptySet(),
-                AdditionalServlet.class.getClassLoader(), narExtractionDirectory);
+        final File narFile = metadata.getArchivePath().toAbsolutePath().toFile();
+        NarClassLoader ncl = NarClassLoaderBuilder.builder()
+                .narFile(narFile)
+                .parentClassLoader(AdditionalServlet.class.getClassLoader())
+                .extractionDirectory(narExtractionDirectory)
+                .build();
 
         AdditionalServletDefinition def = getAdditionalServletDefinition(ncl);
         if (StringUtils.isBlank(def.getAdditionalServletClass())) {
@@ -132,7 +134,7 @@ public class AdditionalServletUtils {
 
         try {
             Class additionalServletClass = ncl.loadClass(def.getAdditionalServletClass());
-            Object additionalServlet = additionalServletClass.newInstance();
+            Object additionalServlet = additionalServletClass.getDeclaredConstructor().newInstance();
             if (!(additionalServlet instanceof AdditionalServlet)) {
                 throw new IOException("Class " + def.getAdditionalServletClass()
                         + " does not implement additional servlet interface");
