@@ -21,6 +21,7 @@ package org.apache.pulsar.broker.loadbalance;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
+import java.util.concurrent.CompletableFuture;
 import org.apache.pulsar.broker.PulsarServerException;
 import org.apache.pulsar.broker.PulsarService;
 import org.apache.pulsar.broker.ServiceConfiguration;
@@ -33,7 +34,7 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 /**
- * LoadManager runs though set of load reports collected from different brokers and generates a recommendation of
+ * LoadManager runs through set of load reports collected from different brokers and generates a recommendation of
  * namespace/ServiceUnit placement on machines/ResourceUnit. Each Concrete Load Manager will use different algorithms to
  * generate this mapping.
  *
@@ -115,6 +116,8 @@ public interface LoadManager {
      */
     Set<String> getAvailableBrokers() throws Exception;
 
+    CompletableFuture<Set<String>> getAvailableBrokersAsync();
+
     void stop() throws PulsarServerException;
 
     /**
@@ -130,7 +133,7 @@ public interface LoadManager {
             final ServiceConfiguration conf = pulsar.getConfiguration();
             final Class<?> loadManagerClass = Class.forName(conf.getLoadManagerClassName());
             // Assume there is a constructor with one argument of PulsarService.
-            final Object loadManagerInstance = loadManagerClass.newInstance();
+            final Object loadManagerInstance = loadManagerClass.getDeclaredConstructor().newInstance();
             if (loadManagerInstance instanceof LoadManager) {
                 final LoadManager casted = (LoadManager) loadManagerInstance;
                 casted.initialize(pulsar);
