@@ -27,8 +27,7 @@ import org.apache.pulsar.broker.BookKeeperClientFactory;
 import org.apache.pulsar.broker.ServiceConfiguration;
 import org.apache.pulsar.common.classification.InterfaceAudience.Private;
 import org.apache.pulsar.common.classification.InterfaceStability.Unstable;
-import org.apache.pulsar.metadata.api.MetadataStore;
-import org.apache.zookeeper.ZooKeeper;
+import org.apache.pulsar.metadata.api.extended.MetadataStoreExtended;
 
 /**
  * Storage to access {@link org.apache.bookkeeper.mledger.ManagedLedger}s.
@@ -41,13 +40,11 @@ public interface ManagedLedgerStorage extends AutoCloseable {
      * Initialize the managed ledger storage.
      *
      * @param conf service config
-     * @param zkClient zk client
      * @param bookkeeperProvider bookkeeper provider
      * @throws Exception
      */
     void initialize(ServiceConfiguration conf,
-                    MetadataStore metadataStore,
-                    ZooKeeper zkClient,
+                    MetadataStoreExtended metadataStore,
                     BookKeeperClientFactory bookkeeperProvider,
                     EventLoopGroup eventLoopGroup) throws Exception;
 
@@ -83,18 +80,16 @@ public interface ManagedLedgerStorage extends AutoCloseable {
      * Initialize the {@link ManagedLedgerStorage} from the provided resources.
      *
      * @param conf service config
-     * @param zkClient zookeeper client
      * @param bkProvider bookkeeper client provider
      * @return the initialized managed ledger storage.
      */
     static ManagedLedgerStorage create(ServiceConfiguration conf,
-                                       MetadataStore metadataStore,
-                                       ZooKeeper zkClient,
+                                       MetadataStoreExtended metadataStore,
                                        BookKeeperClientFactory bkProvider,
                                        EventLoopGroup eventLoopGroup) throws Exception {
         final Class<?> storageClass = Class.forName(conf.getManagedLedgerStorageClassName());
-        final ManagedLedgerStorage storage = (ManagedLedgerStorage) storageClass.newInstance();
-        storage.initialize(conf, metadataStore, zkClient, bkProvider, eventLoopGroup);
+        final ManagedLedgerStorage storage = (ManagedLedgerStorage) storageClass.getDeclaredConstructor().newInstance();
+        storage.initialize(conf, metadataStore, bkProvider, eventLoopGroup);
         return storage;
     }
 
