@@ -21,7 +21,6 @@ package org.apache.pulsar.broker.transaction.buffer;
 import static com.google.common.base.Preconditions.checkArgument;
 import com.google.common.annotations.Beta;
 import java.io.IOException;
-import java.util.concurrent.CompletableFuture;
 import org.apache.pulsar.broker.service.Topic;
 
 /**
@@ -40,7 +39,7 @@ public interface TransactionBufferProvider {
         Class<?> providerClass;
         try {
             providerClass = Class.forName(providerClassName);
-            Object obj = providerClass.newInstance();
+            Object obj = providerClass.getDeclaredConstructor().newInstance();
             checkArgument(obj instanceof TransactionBufferProvider,
                 "The factory has to be an instance of "
                     + TransactionBufferProvider.class.getName());
@@ -55,8 +54,7 @@ public interface TransactionBufferProvider {
      * Open the persistent transaction buffer.
      *
      * @param originTopic
-     * @param transactionBufferFuture the transaction buffer future
      * @return
      */
-    TransactionBuffer newTransactionBuffer(Topic originTopic, CompletableFuture<Void> transactionBufferFuture);
+    TransactionBuffer newTransactionBuffer(Topic originTopic);
 }
